--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -122,34 +122,30 @@
                     <div class="col my-3 mx-3">
                       <p>
                         Primero<br />
-                        Identificar una institución pública o privada formalmente establecida para realizar el servicio
-                        social.
+                        El alumno deberá identificar una institución pública o privada formalmente establecida para realizar el servicio social.
                         <br /><br />
                         Segundo.<br />
-                        Envía a serviciosocial@utel.edu.mx los siguientes datos de la empresa o institución donde
-                        realizarás tu servicio social.<br />
-                        Nombre completo y matrícula.:<br />
-                        Nombre completo de la empresa o institución.
+                        El alumno deberá solicitar el formulario de registro (SERSO) o enviar correo electrónico a serviciosocial@utel.edu.mx , con los siguientes datos.<br/>
+
+                        -Nombre  de la empresa o institución donde realizará el servicio social.<br/>
+                        -Nombre completo y matrícula.
+
                         <br /><br />
                         Tercero.<br />
-                        Recibe la carta de aceptación para que sea complementada con tus datos y los de la empresa,
-                        deberá ser impresa en hoja membretada, firmada y sellada.
+                        
+                        Una vez que se hace el registro en el formulario o se envía correo electrónico, el alumno recibirá la 
+                        carta de aceptación para que sea complementada con sus datos y los de la empresa.La carta se  deberá 
+                        imprimir en hoja membretada y estar firmada y sellada, para posterior realizar el envío.
+
                         <br /><br />
                         Cuarto.<br />
-                        Una vez que envíes en digital la carta de aceptación recibirás por correo electrónico el formato
-                        de Reporte global de actividades y la constancia de término, recuerda que deberás cubrir 480
-                        horas en un periodo mínimo de 6 meses y máximo de 2 años.
+                        Al enviar la carta aceptación por SERSO o correo electrónico , el alumno recibirá como respuesta el  formato de Reporte global de actividades y la constancia de término. Estos últimos dos documentos se entregan al finalizar el servicio social.
                         <br /><br />
                         Quinto.<br />
-                        Notifica a la universidad la conclusión de tu servicio social enviando por correo electrónico el
-                        reporte global y la constancia de término, los cuales deberás enviar por correo electrónico en
-                        hoja membretada, firmados y sellados.
+                        Al finalizar el servicio social el alumno deberá notificar a la universidad la conclusión del servicio social , para ello deberá enviar por SERSO o correo electrónico  el reporte global y la constancia de término, en hoja membretada, firmados y sellados.
                         <br /><br />
                         Sexto.<br />
-                        Una vez aprobados todos tus documentos deberás enviarlos en formato digital por correo
-                        electrónico para ser aprobados.
-                        Una vez aprobados se te indica subirlos a tu plataforma para liberar tu estatus en la plataforma
-
+                        Una vez aprobados todos los documentos de término del servicio escolar ,el alumno deberá enviarlos en formato digital (escaneados) por  SERSO o  correo electrónico para ser aprobados. Por último el alumno deberá adjuntar los formatos en el portal SIU, y esperar a que sean validados y liberado el servicio social , este proceso demora de 15 a 20 días.
                       </p>
 
                       <!---Aviso-->
