--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -84,6 +84,7 @@
           Regular
         </button>
       </h2>
+      
       <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
         aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body" id="SSregular">
@@ -115,7 +116,7 @@
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white">
-                  <h1 class="text-center">Proceso servicio social</h1>
+                  <h1 class="text-center">Proceso servicio social regular</h1>
 
                   <div class="row">
 
@@ -200,12 +201,12 @@
                       <img src="img/serviciosocial/regular/carta-presentacion.png" class="imagenes_ejemplo d-block w-100" alt="...">
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la carta de presentación</strong>
 
                     <p>
-                      -La carta de presentación es un documento donde la escuela se presenta formalmente ante alguna
+                      La carta de presentación es un documento donde la escuela se presenta formalmente ante alguna
                       institución para que los alumnos puedan realizar su servicio social dentro de la
                       misma.<br /><br />
 
@@ -343,7 +344,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características del reporte global de actividades</strong>
 
@@ -420,7 +421,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la constancia de terminación</strong>
 
@@ -499,37 +500,13 @@
                       <div class="col my-3 mx-3">
                         <p>
                           <br /><br />
-                          1. Se emiten convocatorias de acuerdo con los espacios disponibles dentro de las áreas de la
-                          Universidad. En las
-                          mismas se delimitan las actividades y el programa de servicio social. La aceptación del 
-                          dependerá de
-                          las características de la vacante.
+                          1. Si el alumno/egresado cumple con los requisitos  y es aceptado dentro del programa  se  comparte la Carta de Aceptación (Anexo 1) y se comparte la fecha de la capacitación
                           <br /><br />
-                          2. El  solicitará a la Dirección de Servicios Escolares y Regulación de la Universidad,
-                          su autorización para
-                          realizar el servicio social en alguna de las áreas que se mencionan en la convocatoria.
-                          Para dicho propósito entregará la carta de aceptación del servicio social (ver anexo 1)
-                          expedida por el área de la
-                          Universidad que tenga la vacante y solicitará su registro en el programa.
+                          2. El alumno deberá entregar la Carta de Aceptación con los datos correspondientes y dar seguimiento a la base que se le asignan de alumnos inscritos en Utel.
                           <br /><br />
-                          3. La prestación del servicio social será continua, a fin de lograr el objetivo establecido.
+                          3. Una vez que el contacto a la base asignada se le entregan los formatos de Reporte Global de Actividades (Anexo 2) y la Constancia de Término (Anexo 3).
                           <br /><br />
-                          4. Independientemente de la modalidad presencial en la que puede prestarse el servicio social,
-                          la Universidad
-                          impulsa aquellos programas o mecanismos de acreditación del servicio social o equivalentes que
-                          puedan
-                          realizarse en la modalidad a distancia, para que en beneficio de sus alumnos ubicados dentro y
-                          fuera del
-                          territorio nacional, se constituyan en una opción para la realización y la acreditación del
-                          servicio social en línea.
-                          En consecuencia, para la acreditación del servicio social son reconocidas las modalidades:
-                          presencial y en línea.
-                          <br /><br />
-                          5. Al término de las actividades objeto del programa será requisitada y firmará el Reporte
-                          global de actividades
-                          (anexo 2) y el área de la Universidad donde se prestó el servicio social deberá emitir la
-                          constancia
-                          correspondiente (anexo 3).
+                          4. Al finalizar el alumno deberá compartir los formatos de término para revisión y posterior tendrá que adjuntarlos en el porta SIu para la validación y liberación del servicio social.
                         </p>
                       </div>
 
@@ -595,7 +572,7 @@
 
                     </div>
 
-                    <div class="col card border border-0">
+                    <div class="col card border border-0" style="text-align: justify;">
 
                       <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                       La solicitud de servicio social es un formato que tiene que complementar el  y la
@@ -627,7 +604,7 @@
               <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasBottomReporteGlobalUtel" aria-controls="offcanvasBottom"><img
                   style="height: 200px" src="img/serviciosocial/coach/reporte-global.png"
-                  title="Reporte global de actividades de Servicio Social Trabajo Colaborativo"> </button>
+              title="Reporte global de actividades de Servicio Social Trabajo Colaborativo"> </button>
 
               <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomReporteGlobalUtel"
                 aria-labelledby="offcanvasBottomLabel">
@@ -669,7 +646,7 @@
 
                     </div>
 
-                    <div class="col card border border-0">
+                    <div class="col card border border-0" style="text-align: justify;">
 
                       <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
                       <p>
@@ -703,7 +680,7 @@
               <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasBottomConstanciaUtel" aria-controls="offcanvasBottom"><img
                   style="height: 200px" src="img/serviciosocial/coach/constanciadet.png"
-                  title="Constanciade de termino Servicio Social Trabajo Colaborativo"> </button>
+              title="Constanciade de termino Servicio Social Trabajo Colaborativo"> </button>
 
               <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomConstanciaUtel"
                 aria-labelledby="offcanvasBottomLabel">
@@ -744,7 +721,7 @@
 
                     </div>
 
-                    <div class="col card border border-0">
+                    <div class="col card border border-0" style="text-align: justify;">
 
                       <strong class="py-3 px-3"> Características de la constancia de terminación</strong>
 
@@ -914,7 +891,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la carta de presentación</strong>
 
@@ -983,7 +960,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la Excepción de servicio social</strong>
                       -La carta de excepción es un documento donde el alumno presenta su solicitud para la liberación del servicio social donde se especifica que el alumno es trabajador gubernamental y queda excento de realizar el servicio social.
@@ -1070,27 +1047,29 @@
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
                 <div class="container rounded-3 my-3 py-3 bg-white">
-                  <h1 class="text-center">Proceso trabajo colaborativo</h1>
+                  <h1 class="text-center">Proceso servicio social trabajo colaborativo </h1>
 
                   <div class="row">
 
                     <div class="col my-3 mx-3">
                       <p>
 
-                        Es importante resaltar que el  tiene que entregar los mismos formatos de servicio social
-                        del servicio social regular
-                        pero adaptado al trabajo colaborativo.<br /><br />
+                        Para esta modalidad es importante resaltar que el alumno deberá entregar los mismos formatos del servicio social regular pero adaptado al trabajo colaborativo.Los formatos deberán ser impresos en hoja membretada y estar firmados y sellados.<br /><br />
+                        <br/> <br/>
+                        Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
+                        <br/>
+                        -Nombre completo y matrícula
+                        -Modalidad de servicio social 
 
-                        1.-Elaborar propuesta de un proyecto relacionado con el programa académico en curso.
+                        1.- El alumno deberá elaborar una propuesta de un proyecto relacionado con el programa académico en curso.
                         <br /><br />
 
-                        2.-Proponer a una institución pública o privada formalmente establecida el proyecto para
-                        desarrollar. <br /><br />
+                        2.-El alumno tendrá que proponer a una institución pública o privada formalmente establecida el proyecto a desarrollar.
+                        <br /><br />
 
-                        3.-Una vez aceptado el proyecto comenzar a desarrollar la propuesta y presentar avances en la
-                        institución. <br /><br />
+                        3.- Una vez aceptado el proyecto, el alumno deberá comenzar a desarrollar la propuesta y presentar avances en la institución.<br /><br />
 
-                        4.-Una vez verificado y aprobado el trabajo presentar los resultados a servicio social en Utel.
+                        4.- Al finalizar y ser aprobado el proyecto por la empresa,  el alumno deberá presentar los resultados a servicio social en Utel.
                         <br /><br />
 
                         5.-Una vez verificado en Utel se libera en la plataforma. <br /><br />
@@ -1163,7 +1142,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                     La solicitud de trabajo colaborativo es un formato que tiene que complementar el  y la
@@ -1237,7 +1216,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
                     <p>
@@ -1313,7 +1292,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la constancia de terminación</strong>
 
@@ -1484,7 +1463,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                     La solicitud de servicio social es un formato que tiene que complementar el  y la
@@ -1558,7 +1537,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;"> 
 
                     <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
                     <p>
@@ -1634,7 +1613,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la constancia de terminación</strong>
 
@@ -1805,7 +1784,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                     La solicitud de servicio social es un formato que tiene que complementar el  y la
@@ -1878,7 +1857,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
                     <p>
@@ -1953,7 +1932,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la constancia de terminación</strong>
 
@@ -2124,7 +2103,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                     La solicitud de servicio social es un formato que tiene que complementar el  y la
@@ -2197,7 +2176,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
                     <p>
@@ -2318,7 +2297,7 @@
       </h2>
       <div id="panelsStayOpen-collapseCausa" class="accordion-collapse collapse"
         aria-labelledby="panelsStayOpen-headingSix">
-        <div class="accordion-body" id="SStrabajo">
+        <div class="accordion-body" id="SStrabajo" style="text-align: justify;">
           <strong>Servicio Social Con Causa</strong> <br /><br />
 
 
@@ -2445,7 +2424,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                     La solicitud de servicio social es un formato que tiene que complementar el  y la
@@ -2519,7 +2498,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
                     <p>
@@ -2592,7 +2571,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la constancia de terminación</strong>
 
@@ -2772,7 +2751,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                     La solicitud de servicio social es un formato que tiene que complementar el  y la
@@ -3005,21 +2984,13 @@
                     <div class="col my-3 mx-3">
                       <p>
 
-                        1. El  se inscribe al programa de tutorías en la institución. Este deberá entregar a la
-                        universidad la carta de
-                        aceptación (Anexo 1) emitida por la institución.
+                        1. El alumno/egresado ,se inscribe al programa de tutorías en la institución. Este deberá entregar a la universidad la carta de aceptación (Anexo 1) emitida por la institución.
                         <br /><br />
-                        2. El  formará parte del programa durante al menos seis meses o hasta cumplir con el
-                        objetivo propuesto
-                        por la institución.
+                        2. El formará parte del programa durante al menos seis meses o hasta cumplir con el objetivo propuesto por la institución.
                         <br /><br />
-                        3. Una vez que el  cumpla con el programa de tutorías debe entregar el reporte global de
-                        actividades
-                        (Anexo 2) y la constancia de término (Anexo 3).
+                        3. Una vez que el cumpla con el programa de tutorías debe entregar el reporte global de actividades (Anexo 2) y la constancia de término (Anexo 3).
                         <br /><br />
-                        4. Una vez que el  cuente con la carta de aceptación, reporte global de actividades y
-                        constancia de
-                        término se libera su servicio social y se emite la carta de liberación del servicio social.
+                        4. Por último el alumno deberá adjuntar en el portal SIU, los documentos de término para la validación y liberación del servicio social.
 
                       </p>
                     </div>
@@ -3087,7 +3058,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Solicitud Servicio Social </strong>
                     La solicitud de servicio social es un formato que tiene que complementar el  y la
@@ -3160,7 +3131,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3">Reporte global para trabajo colaborativo</strong>
                     <p>
@@ -3234,7 +3205,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la constancia de terminación</strong>
                     <p>
