--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -618,7 +618,7 @@
                         <p class="card-text" style="text-align: justify;">     
                           
                           Documento que se proporciona al alumno, con el cual puede comprobar el avance curricular cursado al momento, 
-                          emitido por la SEP. El proceso de certificación demora de 1 a 3 meses y el documento se comparte en digital en 
+                          emitido por la SEP. El proceso de certificación demora de 2 meses y el documento se comparte en digital en 
                           archivo pdf y xml.</br></br>
       
                           Se deberán cubrir los siguientes requisitos:</br>
