--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -655,7 +655,7 @@
                             Documento que se otorga al alumno que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
                             autenticado por la Secretaría de Educación Pública. </br></br>
 
-                            Para obtener un certificado parcial debes tener cursado mÍnimo un cuatrimestre de la Licenciatura y tu expediente 
+                            Para obtener un certificado parcial se debe tener cursado mÍnimo un cuatrimestre de la Licenciatura y tu expediente 
                             digital completo.
                           </div>
                         </div>   
