--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -192,7 +192,7 @@
                           
                             1- Que la firma de la persona que aparece en el documento es auténtica.
                           </br></br>
-                            2.- Que la persona que firma el documento tiene facultades para ello de con las atribuciones que mediante Ley le son otorgadas al momento de
+                            2.- El firmante tiene facultades para ello de con las atribuciones que mediante Ley le son otorgadas al momento de
                             firmar dicho documento.
                           </br></br>
                             3.- Que el sello o timbre que en su caso consta en el documento, es auténtico.
