--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -214,7 +214,7 @@
           
           <div class="">
           <div class="row">
-            <div class="col col-md-6">
+            <div class="col col-md-6" style="text-align: justify;">
               <br/>
               <h4><b>Convención de la Haya</b></h4></br>
               <p>
