--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -115,7 +115,7 @@
             <div id="panelsStayOpen-collapseproceso" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Proceso servicio social regular</h1>
 
                   <div class="row">
@@ -492,7 +492,7 @@
               <div id="panelsStayOpen-collapseproceso" class="accordion-collapse collapse"
                 aria-labelledby="panelsStayOpen-headingproceso">
                 <div class="accordion-body">
-                  <div class="container rounded-3 my-3 py-3 bg-white">
+                  <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                     <h1 class="text-center">Proceso Coach Universitario</h1>
 
                     <div class="row">
@@ -788,7 +788,7 @@
             <div id="panelsStayOpen-collapseproceso" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Proceso servicio social ART. 91</h1>
 
                   <div class="row">
@@ -1046,7 +1046,7 @@
             <div id="panelsStayOpen-collapseproceso" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Proceso servicio social trabajo colaborativo </h1>
 
                   <div class="row">
@@ -1366,7 +1366,7 @@
             <div id="panelsStayOpen-collapseprocesoJuven" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Servicio social para las juventudes</h1>
 
                   <div class="row">
@@ -1690,7 +1690,7 @@
             <div id="panelsStayOpen-collapseprocesocollapseCoach" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Proceso Coach Titulación y Profesionalización</h1>
 
                   <div class="row">
@@ -2011,7 +2011,7 @@
             <div id="panelsStayOpen-collapseprocesoComunidad" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Proceso Servicio Social Para la Comunidad</h1>
 
                   <div class="row">
@@ -2333,7 +2333,7 @@
             <div id="panelsStayOpen-collapseprocesoCausa" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Proceso Servicio Social Con Causa</h1>
 
                   <div class="row">
@@ -2649,7 +2649,7 @@
             <div id="panelsStayOpen-collapseprocesoEmpresas" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white" style="text-align: justify;">
                   <h1 class="text-center">Proceso Servicio Social en Empresas y Emprendimientos</h1>
 
                   <div class="row">
