--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -802,8 +802,7 @@
                     <div class="col my-3 mx-3">
                       <p>
                         Primero<br/>
-                        Identificar si el alumno cuenta con los requisitos para realizar el proceso de servicio social
-                        por el artículo 91.
+                        Se debe identificar si el alumno  cuenta con los requisitos para realizar el proceso de servicio social por el artículo 91.
                         <br/>
                         1. Contar con un mínimo de 6 meses de antigüedad dentro de la institución.
                         <br/>
@@ -813,22 +812,20 @@
 
                         <br/><br/>
                         Segundo.<br/>
-                        Envía a serviciosocial@utel.edu.mx los siguientes datos de la institución donde se labora junto
+                        Si el alumno cubre los requisitos , deberá llenar el formulario (SERSO) o enviar correo electrónico a  serviciosocial@utel.edu.mx  con los siguientes datos:
                         con requisitos solicitados.<br/>
-                        Nombre completo y matrícula.:<br/>
-                        Nombre completo de la empresa o institución.
+                        Nombre de la  institución donde  labora.<br/>
+                        Nombre completo y matrícula.<br/>
+                        Fecha de ingreso 
                         <br/><br/>
                         Tercero.<br/>
-                        Recibe el formato para liberación de servicio social, este debe ser llenado con los datos
-                        solicitados con apoyo de tu institución.
+                        En respuesta a la información enviada el alumno recibirá  el formato para liberación de servicio social. Este debe ser llenado con los datos solicitados con apoyo de la institución.
                         <br/><br/>
                         Cuarto.<br/>
-                        Una vez que envíes en digital el formato de liberación de servicio social lo valoraremos y en
-                        caso de que se requiera una corrección se te indicará.
+                        Una vez que  el alumno envíe el formato en digital, en hoja membretada,firmado y sellado  ( escaneado) se hará la revisión, y se indicará si es correcto o se requiere alguna corrección.
                         <br/><br/>
                         Quinto.<br/>
-                        Una vez que se encuentre validada por correo se te brindaran indicaciones para subir los
-                        formatos a la plataforma, posteriormente se te notifica la liberación.
+                        Por último el alumno recibirá la indicación de adjuntar el formato en el apartado de exención de servicio social, para ser validado y posterior realizar la liberación del servicio.
                         <br/><br/>
                       </p>
                     </div>
@@ -1064,9 +1061,9 @@
                         <br/> <br/>
                         Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
                         <br/>
-                        -Nombre completo y matrícula
-                        -Modalidad de servicio social 
-
+                        -Nombre completo y matrícula<br/>
+                        -Modalidad de servicio social
+                        <br/><br/>
                         1.- El alumno deberá elaborar una propuesta de un proyecto relacionado con el programa académico en curso.
                         <br/><br/>
 
