--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -353,7 +353,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: NO</br> 
                 <b>Certificado de programa académico -CPA</b>: En caso SUNEDU lo exija</br> 
-                <a href="https://www.sunedu.gob.pe/presentar-solicitud-reconocimiento-grados-titulos-forma-virtual/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.sunedu.gob.pe/presentar-solicitud-reconocimiento-grados-titulos-forma-virtual/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -366,7 +366,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
-                <a href="https://www.mineducacion.gov.co/1759/w3-article-350670.html?_noredirect=1" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.mineducacion.gov.co/1759/w3-article-350670.html?_noredirect=1" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -379,7 +379,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
-                <a href="https://uchile.cl/presentacion/relaciones-internacionales/revalidacion-de-titulos-extranjeros/revalidacion-y-reconocimiento-en-la-universidad-de-chile" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://uchile.cl/presentacion/relaciones-internacionales/revalidacion-de-titulos-extranjeros/revalidacion-y-reconocimiento-en-la-universidad-de-chile" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -392,7 +392,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
-                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center"target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -405,7 +405,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI </br> 
-                <a href="https://mescyt.gob.do/servicios/documentos-extranjeros/ https://uasd.edu.do/index.php/2018-01-23-20-50-42/revalida-o-reconocimiento-de-título" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://mescyt.gob.do/servicios/documentos-extranjeros/ https://uasd.edu.do/index.php/2018-01-23-20-50-42/revalida-o-reconocimiento-de-título" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -418,7 +418,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: NO</br> 
-                <a href="http://www.ceub.edu.bo/academica/documentos/normas/04_Reglamento_Titulos_y_Grados.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="http://www.ceub.edu.bo/academica/documentos/normas/04_Reglamento_Titulos_y_Grados.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -431,7 +431,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
-                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.gob.ec/senescyt/tramites/reconocimiento-general-titulos-extranjero" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -444,7 +444,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
-                <a href="https://www.mined.gob.sv/servicios/incorporacion-de-titulos-de-educacion-superior-procedentes-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.mined.gob.sv/servicios/incorporacion-de-titulos-de-educacion-superior-procedentes-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -457,7 +457,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: De requerirse</br> 
                 <b>Certificado de programa académico -CPA</b>: De requerirse</br> 
-                <a href="https://portalregistro.usac.edu.gt/formulario_incorporado" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://portalregistro.usac.edu.gt/formulario_incorporado" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -470,7 +470,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
-                <a href="http://www.cones.gov.py/nuevo-formulario-de-reconocimiento-de-titulos-extranjeros-con-importantes-ajustes-del-cones/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="http://www.cones.gov.py/nuevo-formulario-de-reconocimiento-de-titulos-extranjeros-con-importantes-ajustes-del-cones/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -483,7 +483,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>: SI</br> 
-                <a href="https://www.panamatramita.gob.pa/es/tramite/solicitud-de-homologaci%C3%B3n-de-t%C3%ADtulos#:~:text=Homologar%20los%20t%C3%ADtulos%20de%20post,puedan%20tener%20validez%20en%20Panam%C3%A1.&text=Carta%20de%20solicitud%20en%20papel,y%20cualquier%20otra%20informaci%C3%B3n%20pertinente." class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.panamatramita.gob.pa/es/tramite/solicitud-de-homologaci%C3%B3n-de-t%C3%ADtulos#:~:text=Homologar%20los%20t%C3%ADtulos%20de%20post,puedan%20tener%20validez%20en%20Panam%C3%A1.&text=Carta%20de%20solicitud%20en%20papel,y%20cualquier%20otra%20informaci%C3%B3n%20pertinente." class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -496,7 +496,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>:</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
-                <a href="https://www.gub.uy/tramites/solicitud-reconocimientos-revalidas-titulos-terciarios" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.gub.uy/tramites/solicitud-reconocimientos-revalidas-titulos-terciarios" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -509,7 +509,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
-                <a href="https://des.unah.edu.hn/servicio-al-usuario/tramites/validar-estudios-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://des.unah.edu.hn/servicio-al-usuario/tramites/validar-estudios-del-extranjero/" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -522,7 +522,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>:</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
-                <a href="https://www.unan.edu.ni/wp-content/uploads/2019/03/unan-managua-reglamento-reconocimiento-incorporacion-profesionales-nicaragua.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://www.unan.edu.ni/wp-content/uploads/2019/03/unan-managua-reglamento-reconocimiento-incorporacion-profesionales-nicaragua.pdf" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -535,7 +535,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: SI</br> 
                 <b>Certificado de programa académico -CPA</b>:</br> 
-                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
@@ -548,7 +548,7 @@
                 <b>Apostilla título</b>: SI</br> 
                 <b>Apostilla certificada</b>: </br> 
                 <b>Certificado de programa académico -CPA</b>: Si</br> 
-                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center">Visitar web</a></br>
+                <a href="https://ore.conare.ac.cr/xhtml/index.xhtml" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Visitar web</a></br>
               </p>
             </div>
           </div>
