--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -38,7 +38,7 @@
                       <div class="col-md-6">
                         <div class="card-body">
                           <h5 class="card-title text-center">Equivalencia</h5>
-                          <p class="card-text">     
+                          <p class="card-text" style="text-align: justify;">     
                             
                             Trámite ante SEP para equiparar estudios realizados en el sistema educativo nacional.<br/><br/>
 
@@ -79,7 +79,7 @@
                       <div class="col-md-6">
                         <div class="card-body">
                           <h5 class="card-title text-center">Revalidación</h5>
-                          <p class="card-text">     
+                          <p class="card-text" style="text-align: justify;">      
                             
                             Trámite ante SEP para equiparar estudios realizados fuera del sistema educativo nacional (en  el extranjero)</br></br>
 
